chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jzhub-service
  namespace: gitdata
  labels:
    apptype: jzhub
spec:
  type: ClusterIP
  selector:
    app: jzhub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
